--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap");
+
+/* 
+   Files has to be in this order. We reset the file, and set the variables. 
+   Putting @import "variable.css"; at the end will not be able variables to work in other imported codes.
+*/
+
 @import "reset.css";
-@import "status-bar.css";
 @import "variable.css";
+
+/* Components */
+@import "status-bar.css";
+@import "nav-bar.css";
+
+/* Screens */
 @import "login.css";
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  /*
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  */
+  font-family: "Open Sans", sans-serif;
 }
