--- a/css/screens/reset.css
+++ b/css/screens/reset.css
@@ -127,3 +127,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+  /*I do not want any of default link decoration*/
+}
